# microgpt-rs

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  rust-port-research.md
.githooks/: pre-commit  pre-push
docs/: architecture-ts-fr-reference.md  architecture.md  gist-conformance.md  roadmap.md  ui-parameters-audit.md
src/: backward.rs  config.rs  data.rs  forward.rs  inference.rs  lib.rs  model.rs  ops.rs  rng.rs  train.rs  value.rs
tests/: smoke.rs
