[package]
name = "microgpt-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Minimal GPT library in pure Rust — based on Karpathy's microgpt.py, zero dependencies"
license = "MIT"
repository = "https://github.com/mon-atelier-ia/microgpt-rs"
authors = ["mon-atelier-ia"]
keywords = ["gpt", "transformer", "zero-dependency", "machine-learning"]
categories = ["science", "algorithms"]

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
